test-k8s.io/just_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-hello
spec:
  containers:
  - name: test-container-hello
    image: 10449/test_cicd

  - name: test-python
    image: 10449/test_python

#apiVersion: v1
#kind: Pod
#metadata:
#  name: test-pod-hello
#spec:
#  containers:
#  - name: test-container-hello
#    image: 10449/test_cicd

#  - name: test-python
#    image: 10449/test_python
#    image: hello-world-test:latest
#    image: 10449/test_tizim
#    image: nginx
