test-k8s.io/ns_cpu.yml
apiVersion: v1
kind: Pod
metadata:
  name: default-cpu-demo-3
spec:
  containers:
  - name: default-cpu-demo-3-ctr
    image: nginx
    resources:
      limits:
        cpu: "1"
      requests:
        cpu: "0.75"
